--- a/package.json
+++ b/package.json
@@ -12,5 +12,23 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.2"
-  }
+  },
+  "name": "awesome-books",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/c00p75/Awesome-books.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/c00p75/Awesome-books/issues"
+  },
+  "homepage": "https://github.com/c00p75/Awesome-books#readme",
+  "description": ""
 }
